--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
-TELEGRAM_TOKEN=8334528663:AAEQdGEH1zsAH0ZwoIbuiXDJHNvFfxscuxk
+TELEGRAM_TOKEN=8567432985:AAE99SghBA0zf9jzqlQCFrpCX6Xc4u2Hrig
 TELEGRAM_ADMIN_IDS=2134510902
 MARZBAN_BASE_URL=https://panel.dagdev.ru
 MARZBAN_API_KEY=kamil:kama29042006
-PAYMENT_PROVIDER_KEY=dummy
+PAYMENT_PROVIDER_KEY=381764678:TEST:158489
 PAYMENT_PUBLIC_KEY=dummy
 PAYMENT_WEBHOOK_SECRET=
-PAYMENT_CURRENCY=USD
+PAYMENT_CURRENCY=RUB
 DATABASE_PATH=./bot.db
 WEBHOOK_HOST=0.0.0.0
 WEBHOOK_PATH=/payment/webhook
 BASE_SUBSCRIPTION_DAYS=30
 REFERRAL_BONUS_DAYS=7
+payment_shop_id=1240660
