--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ TELEGRAM_TOKEN=8567432985:AAE99SghBA0zf9jzqlQCFrpCX6Xc4u2Hrig
 TELEGRAM_ADMIN_IDS=2134510902
 MARZBAN_BASE_URL=https://panel.dagdev.ru
 MARZBAN_API_KEY=kamil:kama29042006
-PAYMENT_PROVIDER_KEY=381764678:TEST:158489
+PAYMENT_PROVIDER_KEY=390540012:LIVE:86279
 PAYMENT_PUBLIC_KEY=dummy
 PAYMENT_WEBHOOK_SECRET=
 PAYMENT_CURRENCY=RUB
